--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.0",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "forge-apis": "^0.7.3",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "node-excel-export": "^1.4.4",
+    "xlsx-writestream": "^0.5.1"
   }
 }
