--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "filereader": "^0.10.3",
     "forge-apis": "^0.7.3",
+    "html-pdf": "^2.2.0",
     "multer": "^1.4.2",
     "node-excel-export": "^1.4.4",
     "xlsx-writestream": "^0.5.1"
